crates/lingui_macro/tests/snapshots/lingui_directive__jsx_trans_with_dynamic_id_and_no_id_prefix.snap
---
source: tests/lingui_directive.rs
---
import { Trans } from "@lingui/react/macro";
const dynId = "dynamic";
const el = <Trans id={dynId}>Hello</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
const dynId = "dynamic";
const el = <Trans_ {.../*i18n*/ {
    id: "uzTaYi",
    message: "Hello"
}}/>;
