crates/lingui_macro/tests/snapshots/lingui_directive__jsx_trans_with_id_prefix_leader.snap
---
source: crates/lingui_macro/tests/lingui_directive.rs
info:
  id_prefix_leader: "."
---
import { Trans } from "@lingui/react/macro";
/* lingui-set idPrefix="checkout" */
const el1 = <Trans id=".usesPrefix">Hello</Trans>;
const el2 = <Trans id=".usesPrefix.with.subpath">Hello</Trans>;
const el3 = <Trans id="unprefixed.key">Hello</Trans>;
const el4 = <Trans id="unprefixed">Hello</Trans>;
const el5 = <Trans id="test">Hello</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
/* lingui-set idPrefix="checkout" */ const el1 = <Trans_ {.../*i18n*/ {
    id: "checkout.usesPrefix",
    message: "Hello"
}}/>;
const el2 = <Trans_ {.../*i18n*/ {
    id: "checkout.usesPrefix.with.subpath",
    message: "Hello"
}}/>;
const el3 = <Trans_ {.../*i18n*/ {
    id: "unprefixed.key",
    message: "Hello"
}}/>;
const el4 = <Trans_ {.../*i18n*/ {
    id: "unprefixed",
    message: "Hello"
}}/>;
const el5 = <Trans_ {.../*i18n*/ {
    id: "test",
    message: "Hello"
}}/>;
