crates/lingui_macro/tests/snapshots/lingui_directive__jsx_trans_with_non_matching_id_prefix_leader.snap
---
source: crates/lingui_macro/tests/lingui_directive.rs
info:
  id_prefix_leader: "."
---
import { Trans } from "@lingui/react/macro";
/* lingui-set idPrefix="checkout." */
const el = <Trans id="greeting">Hello</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
/* lingui-set idPrefix="checkout." */ const el = <Trans_ {.../*i18n*/ {
    id: "greeting",
    message: "Hello"
}}/>;
