crates/lingui_macro/tests/snapshots/lingui_directive__use_lingui_t_with_directive_context.snap
---
source: crates/lingui_macro/tests/lingui_directive.rs
---
import { useLingui } from '@lingui/react/macro';

function App() {
  const { t } = useLingui();
  /* lingui-set context="my context" */
  return t`Hello`;
}

↓ ↓ ↓ ↓ ↓ ↓

import { useLingui as $_useLingui } from "@lingui/react";
function App() {
    const { _: $__ } = $_useLingui();
    /* lingui-set context="my context" */ return $__(/*i18n*/ {
        id: "WMU_Op",
        message: "Hello",
        context: "my context"
    });
}
